--- a/Reviews/reviews.html
+++ b/Reviews/reviews.html
@@ -11,7 +11,7 @@
 
         
         <div class="logo">
-            <img src="/IMAGE/Logo.jpg" alt="Logo">
+            <img src="Logo.jpg" alt="Logo">
         </div>
 
     
