--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <ul>
                 <li><a href="index.html" class="active">HOME</a></li>
                 <li><a href="Menu.html">MENU</a></li>
-                <li><a href="/Reviews/reviews.html">REVIEW</a></li>
-                <li><a id="nav-login" href="/Login/login.html">LOGIN/SIGNUP</a></li>
-                <li><a href="/Manager/manager.html">MANAGER</a></li>
+                <li><a href="Reviews/reviews.html">REVIEW</a></li>
+                <li><a id="nav-login" href="Login/login.html">LOGIN/SIGNUP</a></li>
+                <li><a href="Manager/manager.html">MANAGER</a></li>
             </ul>
         </nav>
 
