--- a/Reviews/reviews.html
+++ b/Reviews/reviews.html
@@ -17,11 +17,11 @@
     
         <nav class="main-nav">
             <ul>
-                <li><a href="/index.html">HOME</a></li>
-                <li><a href="/Menu.html">MENU</a></li>
-                <li><a href="reviews.html" class="active">REVIEW</a></li>
-                <li><a id="nav-login" href="/Login-SignUp/login-signUp.html">LOGIN/SIGNUP</a></li>
-                <li><a href="/Manager/manager.html">MANAGER</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="Menu.html">MENU</a></li>
+                <li><a href="Reviews/reviews.html" class="active">REVIEW</a></li>
+                <li><a id="nav-login" href="Login-SignUp/login-signUp.html">LOGIN/SIGNUP</a></li>
+                <li><a href="Manager/manager.html">MANAGER</a></li>
 
             </ul>
         </nav>
