--- a/cart.html
+++ b/cart.html
@@ -17,9 +17,9 @@
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="Menu.html">MENU</a></li>
-                <li><a href="/Reviews/reviews.html">REVIEWS</a></li>
+                <li><a href="Reviews/reviews.html">REVIEW</a></li>
                 <li><a id="nav-login" href="Login-SignUp/login-signUp.html">LOGIN/SIGNUP</a></li>
-                <li><a href="/Manager/manager.html">MANAGER</a></li>
+                <li><a href="Manager/manager.html">MANAGER</a></li>
             </ul>
         </nav>
 
