--- a/Menu.html
+++ b/Menu.html
@@ -11,26 +11,26 @@
 <header class="main-header">
 
     <div class="logo">
-        <img src="./IMAGE/Logo.jpg" alt="Logo">
+        <img src="IMAGE/Logo.jpg" alt="Logo">
     </div>
 
     <nav class="main-nav">
         <ul>
-            <li><a href="./index.html">HOME</a></li>
-            <li><a href="./Menu.html" class="active">MENU</a></li>
-            <li><a href="./Reviews/reviews.html">REVIEW</a></li>
-            <li><a id="nav-login" href="./Login-SignUp/login-signUp.html">LOGIN/SIGNUP</a></li>
-            <li><a href="./Manager/manager.html">MANAGER</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="Menu.html" class="active">MENU</a></li>
+            <li><a href="Reviews/reviews.html">REVIEW</a></li>
+            <li><a id="nav-login" href="Login-SignUp/login-signUp.html">LOGIN/SIGNUP</a></li>
+            <li><a href="Manager/manager.html">MANAGER</a></li>
         </ul>
     </nav>
 
     <div class="order-actions"> 
-        <a href="./cart.html" class="cart-icon-link">
+        <a href="cart.html" class="cart-icon-link">
             <span class="cart-count">0</span> <span class="cart-icon">🛍️</span>
         </a>
 
         <div class="order-button">
-            <a href="./cart.html" class="btn">ORDER NOW</a>
+            <a href="cart.html" class="btn">ORDER NOW</a>
         </div>
     </div>
 </header>
@@ -48,19 +48,14 @@
     </div>
 
     <section class="menu-content">
-        <!-- BURGERS -->
         <div id="burgers-content" class="menu-section active-section"></div>
 
-        <!-- APPETIZERS -->
         <div id="appetizers-content" class="menu-section hidden-section"></div>
 
-        <!-- STEAKS -->
         <div id="texasbbq-content" class="menu-section hidden-section"></div>
 
-        <!-- BEVERAGES -->
         <div id="beverages-content" class="menu-section hidden-section"></div>
 
-        <!-- DESSERTS -->
         <div id="desserts-content" class="menu-section hidden-section"></div>
     </section>
 </main>
