--- a/Menu.html
+++ b/Menu.html
@@ -11,7 +11,7 @@
 <header class="main-header">
 
     <div class="logo">
-        <img src="IMAGE/Logo.jpg" alt="Logo">
+        <img src="./IMAGE/Logo.jpg" alt="Logo">
     </div>
 
     <nav class="main-nav">
@@ -48,14 +48,19 @@
     </div>
 
     <section class="menu-content">
+        <!-- BURGERS -->
         <div id="burgers-content" class="menu-section active-section"></div>
 
+        <!-- APPETIZERS -->
         <div id="appetizers-content" class="menu-section hidden-section"></div>
 
+        <!-- STEAKS -->
         <div id="texasbbq-content" class="menu-section hidden-section"></div>
 
+        <!-- BEVERAGES -->
         <div id="beverages-content" class="menu-section hidden-section"></div>
 
+        <!-- DESSERTS -->
         <div id="desserts-content" class="menu-section hidden-section"></div>
     </section>
 </main>
@@ -64,8 +69,9 @@
     <p>© 2025 Lonestar Bites. All Rights Reserved.</p>
 </footer>
 
-<script src="Menu.js"></script>
+<script src="script.js"></script>
 <script src="cart.js"></script>
+<script src="Menu.js"></script>
 <script src="Manager/manager.js"></script>
 </body>
 </html>
