--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
     <header class="main-header">
 
         <div class="logo">
-            <img src="./IMAGE/Logo.jpg" alt="Logo">
+            <img src="IMAGE/Logo.jpg" alt="Logo">
         </div>
 
         <nav class="main-nav">
             <ul>
-                <li><a href="./index.html" class="active">HOME</a></li>
-                <li><a href="./Menu.html">MENU</a></li>
-                <li><a href="./Reviews/reviews.html">REVIEW</a></li>
-                <li><a id="nav-login" href="./Login-SignUp/login-signUp.html">LOGIN/SIGNUP</a></li>
+                <li><a href="index.html" class="active">HOME</a></li>
+                <li><a href="Menu.html">MENU</a></li>
+                <li><a href="Reviews/reviews.html">REVIEW</a></li>
+                <li><a id="nav-login" href="Login-SignUp/login-signUp.html">LOGIN/SIGNUP</a></li>
                 <li><a href="Manager/manager.html">MANAGER</a></li>
             </ul>
         </nav>
 
        <div class="order-actions"> 
-            <a href="./cart.html" class="cart-icon-link active">
+            <a href="cart.html" class="cart-icon-link active">
                 <span class="cart-count">0</span> <span class="cart-icon">🛍️</span>
             </a>
             
             <div class="order-button">
-                 <a href="./cart.html" class="btn">ORDER NOW</a>
+                 <a href="cart.html" class="btn">ORDER NOW</a>
             </div>
         </div>
 
@@ -39,7 +39,7 @@
         <div class="welcome-content">
             <h1>Welcome to Lonestar Bites!</h1>
             <p>Home of bold flavors, juicy steaks, Texas sized portions, and incredible hospitality!</p>
-            <a href="./Menu.html" class="btn">View Menu</a>
+            <a href="Menu.html" class="btn">View Menu</a>
         </div>
     </section>
 
@@ -47,17 +47,17 @@
         <h2>Our Favorites</h2>
         <div class="favorite-items">
             <div class="item">
-                <img src="./IMAGE/Pecan-Pie-Web-8.jpg" alt="Pecan Pie">
+                <img src="IMAGE/Pecan-Pie-Web-8.jpg" alt="Pecan Pie">
                 <h3>Pecan Pie</h3>
                 <p>A southern favorite!</p>
             </div>
             <div class="item">
-                <img src="./IMAGE/bacon-burger.jpg" alt="Burger" >
+                <img src="IMAGE/bacon-burger.jpg" alt="Burger" >
                 <h3>Texas Burger</h3>
                 <p>Stacked with cheddar, bacon, and a smoky BBQ</p>
             </div>
             <div class="item">
-                <img src="./IMAGE/ribeye.png" alt="Steak">
+                <img src="IMAGE/ribeye.png" alt="Steak">
                 <h3>Ribeye Steak</h3>
                 <p>Juicy ribeye served with seasoned fries, cooked to your liking</p>
             </div>
@@ -75,6 +75,7 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="cart.js"></script>
     <script src="Menu.js"></script>
     <script src="Manager/manager.js"></script>
 </body>
